# IronRDP

./: README.md  release-plz.toml  report.json
.github/actions/install-build-deps/: action.yml
.github/workflows/: ci.yml  release-binaries.yml  release-crates.yml
crates/ironrdp/: CHANGELOG.md  Cargo.toml
crates/ironrdp-acceptor/: CHANGELOG.md  Cargo.toml
crates/ironrdp-agent/: CHANGELOG.md  Cargo.toml  README.md
crates/ironrdp-ainput/: CHANGELOG.md  Cargo.toml
crates/ironrdp-async/: CHANGELOG.md  Cargo.toml
crates/ironrdp-blocking/: CHANGELOG.md  Cargo.toml
crates/ironrdp-cfg/: CHANGELOG.md  Cargo.toml
crates/ironrdp-client/: CHANGELOG.md  Cargo.toml
crates/ironrdp-client/src/: rdp.rs  ws.rs
crates/ironrdp-cliprdr/: CHANGELOG.md  Cargo.toml
crates/ironrdp-cliprdr-native/: CHANGELOG.md
crates/ironrdp-connector/: CHANGELOG.md  Cargo.toml
crates/ironrdp-connector/src/: connection.rs  connection_activation.rs
crates/ironrdp-core/: CHANGELOG.md
crates/ironrdp-core/src/: lib.rs  non_empty.rs
crates/ironrdp-displaycontrol/: CHANGELOG.md  Cargo.toml
crates/ironrdp-dvc/: CHANGELOG.md  Cargo.toml
crates/ironrdp-dvc-com-plugin/: CHANGELOG.md  Cargo.toml
crates/ironrdp-dvc-pipe-proxy/: CHANGELOG.md  Cargo.toml
crates/ironrdp-dvc-pipe-proxy/src/: proxy.rs  worker.rs
crates/ironrdp-dvc-pipe-proxy/src/platform/: windows.rs
crates/ironrdp-echo/: CHANGELOG.md  Cargo.toml
crates/ironrdp-egfx/: CHANGELOG.md  Cargo.toml
crates/ironrdp-futures/: CHANGELOG.md  Cargo.toml
crates/ironrdp-graphics/: CHANGELOG.md  Cargo.toml
crates/ironrdp-graphics/src/: dwt.rs
crates/ironrdp-input/: CHANGELOG.md  Cargo.toml
crates/ironrdp-mstsgu/: CHANGELOG.md  Cargo.toml
crates/ironrdp-nscodec/: Cargo.toml
crates/ironrdp-pdu/: CHANGELOG.md  Cargo.toml
crates/ironrdp-pdu/src/: mcs.rs
crates/ironrdp-pdu/src/input/: mouse.rs
crates/ironrdp-pdu/src/rdp/: headers.rs
crates/ironrdp-propertyset/: CHANGELOG.md  Cargo.toml
crates/ironrdp-rdpdr/: CHANGELOG.md  Cargo.toml
crates/ironrdp-rdpdr-native/: CHANGELOG.md  Cargo.toml
crates/ironrdp-rdpeusb/: Cargo.toml
crates/ironrdp-rdpeusb/src/: client.rs
crates/ironrdp-rdpfile/: CHANGELOG.md  Cargo.toml
crates/ironrdp-rdpsnd/: CHANGELOG.md  Cargo.toml
crates/ironrdp-rdpsnd-native/: CHANGELOG.md
crates/ironrdp-server/: CHANGELOG.md  Cargo.toml
crates/ironrdp-server/src/: server.rs
crates/ironrdp-session/: CHANGELOG.md  Cargo.toml
crates/ironrdp-session/src/: active_stage.rs  fast_path.rs  lib.rs
crates/ironrdp-session/src/x224/: mod.rs
crates/ironrdp-svc/: CHANGELOG.md  Cargo.toml
crates/ironrdp-testsuite-core/tests/rdpeusb/: client.rs  mod.rs  server.rs
crates/ironrdp-testsuite-core/tests/rdpeusb/io/: mod.rs  requests.rs  transfers.rs
crates/ironrdp-testsuite-core/tests/session/: autodetect.rs  connection_activation.rs
crates/ironrdp-testsuite-extra/: Cargo.toml
crates/ironrdp-testsuite-extra/tests/: dvc_pipe_proxy.rs  e2e.rs  main.rs
crates/ironrdp-tls/: CHANGELOG.md
crates/ironrdp-tokio/: CHANGELOG.md  Cargo.toml
crates/ironrdp-viewer/: CHANGELOG.md  Cargo.toml  README.md
crates/ironrdp-web/src/: session.rs
crates/ironrdp/examples/: screenshot.rs
ffi/dotnet/Devolutions.IronRdp.AvaloniaExample/: MainWindow.axaml.cs
ffi/src/connector/: activation.rs
ffi/src/session/: mod.rs
web-client/iron-remote-desktop-rdp/src/: iron-remote-desktop.svelte
web-client/iron-remote-desktop/public/: package.json
web-client/iron-svelte-client/src/lib/login/: login.svelte
web-client/iron-svelte-client/src/lib/remote-screen/: remote-screen.svelte
xtask/src/: check.rs  cli.rs  main.rs
