[package]
name = "ironrdp-agent"
version = "0.1.0"
readme = "README.md"
description = "CLI-driven, daemon-backed agentic RDP client suitable for LLM consumption"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[[bin]]
name = "ironrdp-agent"
path = "src/main.rs"
test = false

[features]
# Exposes otherwise-internal modules (e.g. the wire codec helpers) for unit testing from the
# workspace test suite. Hidden from docs; not intended for downstream use.
internal = []

[dependencies]
# RDP client engine: only the TLS backend is mandated
ironrdp-client = { path = "../ironrdp-client", version = "0.1", features = ["rustls"] }

# Configuration model and codecs
ironrdp-core = { path = "../ironrdp-core", version = "0.2", features = ["alloc"] }
ironrdp-pdu = { path = "../ironrdp-pdu", version = "0.9" }
ironrdp-propertyset = { path = "../ironrdp-propertyset", version = "0.1" }
ironrdp-cfg = { path = "../ironrdp-cfg", version = "0.1" }
ironrdp-rdpfile = { path = "../ironrdp-rdpfile", version = "0.1" }
ironrdp-input = { path = "../ironrdp-input", version = "0.7" }

# Async runtime and IPC transport
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "signal"] }

# CLI
clap = { version = "4.6", features = ["derive", "cargo"] }

# Logging (ring-buffer tracing layer)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PNG encoding for screenshots
png = "0.18"

# Utils
anyhow = "1"
whoami = "2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
